--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pygsheets = "*"
 pandas = "*"
+sqlalchemy = "~=1.4"
+sqlsorcery = {extras = ["mssql"],version = "*"}
+pygsheets = "*"
+job-notifications = "*"
 numpy = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
