--- a/Pipfile
+++ b/Pipfile
@@ -1,17 +1,15 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
-
-[packages]
-pandas = "==2.0.3"
-sqlalchemy = "~=1.4"
-sqlsorcery = {extras = ["mssql"],version = "*"}
-pygsheets = "*"
-job-notifications = "*"
-numpy = "*"
 
 [dev-packages]
 
+[packages]
+gbq-connector = "*"
+pandas = "*"
+pygsheets = "*"
+job-notifications = "*"
+
 [requires]
-python_version = "3.10"
+python_version = "3.12"
